# MAT3007-Optimization

./: README.md  pyproject.toml
homework1/: hw1.ipynb  hw1.py
homework2/: hw2.py
homework8/Newton/: armijo_backtracking.m  gradient.m  hessian.m  hessian.py  run_newton.m  run_newton.py
homework8/gradient descent/: armijo_backtracking.m  armijo_backtracking.py  gradient.py  run_gradient_descent.m  run_gradient_descent.py
homework9/: q4workspace.ipynb
